<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SignUpActivity">

    <ImageView
        android:id="@+id/backBtnSignUp"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/back"
        android:padding="8dp"
        />



    <ImageView
        android:id="@+id/imageView"
        android:layout_width="258dp"
        android:layout_height="258dp"
        android:scaleType="fitXY"
        android:src="@drawable/splash_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="60dp"/>

    <EditText
        android:id="@+id/userNameSignUpEdt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/white_full_corner"
        android:drawableLeft="@drawable/user"
        android:drawablePadding="8dp"
        android:hint="@string/username"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/passwordSignUpEdt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/white_full_corner"
        android:drawableLeft="@drawable/password_icon"
        android:drawablePadding="8dp"
        android:hint="@string/password"
        android:padding="8dp"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameSignUpEdt" />

    <Button
        android:id="@+id/SignUpBtn"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/orange"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/passwordSignUpEdt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordSignUpEdt" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:src="@drawable/or_line"
        app:layout_constraintEnd_toEndOf="@+id/SignUpBtn"
        app:layout_constraintStart_toStartOf="@+id/SignUpBtn"
        app:layout_constraintTop_toBottomOf="@+id/SignUpBtn" />


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/if_you_don_t_have_an_account"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <TextView
        android:id="@+id/registerTxv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_now"
        android:textStyle="bold"
        android:layout_marginStart="8dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5" />


</androidx.constraintlayout.widget.ConstraintLayout>